force-app/main/default/objects/Reference_PEO_Discrepancy__c/Reference_PEO_Discrepancy__c.object-meta.xml
<CustomObject>
    <description>This will house discrepancies for the following groups : 
PEO New Business</description>
    <label>Reference PEO Discrepancy</label>
    <nameField>
        <displayFormat>Disc-{00000000}</displayFormat>
        <label>Discrepancy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference PEO Discrepancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>