force-app/main/default/objects/Reference_PEO_Discrepancy__c/fields/Contractual_Hold__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractual Hold</label>
    <type>Checkbox</type>
</CustomField>