force-app/main/default/objects/Reference_PEO_Discrepancy__c/fields/Discrepancy_Area__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Area__c</fullName>
    <label>Discrepancy Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Payroll Issues</fullName>
            </value>
            <value>
                <fullName>Medical Underwriting</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>