force-app/main/default/objects/Reference_PEO_Discrepancy__c/fields/Discrepancy_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Sub_Type__c</fullName>
    <label>Discrepancy Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Discrepancy_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Assigns Employee Numbers&quot; Marked &quot;No&quot;</fullName>
            </value>
            <value>
                <fullName>(Marital Status) &amp; (Exemptions) listed in addition to &quot;Exempt&quot; will default to S-0 unless new W4 received</fullName>
            </value>
            <value>
                <fullName>1st check date outside of submission guidelines</fullName>
            </value>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>401k Section not completed</fullName>
            </value>
            <value>
                <fullName>Account and/or Routing Numbers are cut off</fullName>
            </value>
            <value>
                <fullName>Accountholder&apos;s signature-cannot set up w/o signature or bank letter stating ee is on the acct.</fullName>
            </value>
            <value>
                <fullName>ACH Account</fullName>
            </value>
            <value>
                <fullName>Address Illegible</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Admin fee 0</fullName>
            </value>
            <value>
                <fullName>Admin fee doesn&apos;t match other common/controlled groups/parent</fullName>
            </value>
            <value>
                <fullName>Aflac</fullName>
            </value>
            <value>
                <fullName>Annual salary needed for requested Life Ins. enrollment</fullName>
            </value>
            <value>
                <fullName>Approval Expired- New MFF Needed</fullName>
            </value>
            <value>
                <fullName>Approval over 90 days</fullName>
            </value>
            <value>
                <fullName>Band Change Needed</fullName>
            </value>
            <value>
                <fullName>Bank Account/Routing number error</fullName>
            </value>
            <value>
                <fullName>Bank letter for Savings account</fullName>
            </value>
            <value>
                <fullName>BCP</fullName>
            </value>
            <value>
                <fullName>Benefit Class</fullName>
            </value>
            <value>
                <fullName>Benefits Insurance Class Code</fullName>
            </value>
            <value>
                <fullName>Benefit Worksheets missing</fullName>
            </value>
            <value>
                <fullName>Benefit Worksheets missing/incomplete</fullName>
            </value>
            <value>
                <fullName>Benefit Worksheets not signed</fullName>
            </value>
            <value>
                <fullName>Billing schedule indicates to bill setup fees but check received</fullName>
            </value>
            <value>
                <fullName>Branch Client Number</fullName>
            </value>
            <value>
                <fullName>Branch Client Number/Payroll Specialist Name</fullName>
            </value>
            <value>
                <fullName>Business structure not checked</fullName>
            </value>
            <value>
                <fullName>Cannot do flat $ amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>