force-app/main/default/objects/Reference_PEO_Discrepancy__c/fields/Discrepancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Type__c</fullName>
    <label>Discrepancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Discrepancy_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>All Employee Paperwork Not Submitted with Deal</fullName>
            </value>
            <value>
                <fullName>Ancillary Products</fullName>
            </value>
            <value>
                <fullName>Back-up Docs</fullName>
            </value>
            <value>
                <fullName>Benefits Enrollment</fullName>
            </value>
            <value>
                <fullName>Benefits Worksheets</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Billing Schedule</fullName>
            </value>
            <value>
                <fullName>Billing Schedule Incorrect</fullName>
            </value>
            <value>
                <fullName>COI Missing/Incorrect/Incomplete</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Compliance Page</fullName>
            </value>
            <value>
                <fullName>CSA/PEO081</fullName>
                <label>CSA</label>
            </value>
            <value>
                <fullName>Deductions</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>EE Information</fullName>
            </value>
            <value>
                <fullName>EE Paperwork</fullName>
            </value>
            <value>
                <fullName>Final Enrollment</fullName>
            </value>
            <value>
                <fullName>Final Underwriting</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Form 8973</fullName>
            </value>
            <value>
                <fullName>Fulfillment Center</fullName>
            </value>
            <value>
                <fullName>Health and Benefits</fullName>
            </value>
            <value>
                <fullName>Initial Quote</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Missing ESR Import Spreadsheet</fullName>
            </value>
            <value>
                <fullName>Missing PEO0365</fullName>
            </value>
            <value>
                <fullName>Missing Prior Wages</fullName>
            </value>
            <value>
                <fullName>Missing WC approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>