force-app/main/default/objects/Reference_PEO_Discrepancy__c/fields/HoldPayrollWillNotRun__c.field-meta.xml
<CustomField>
    <fullName>HoldPayrollWillNotRun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Hold</label>
    <type>Checkbox</type>
</CustomField>