force-app/main/default/objects/Reference_PEO_Discrepancy__c/fields/NonHoldPayrollWillRun__c.field-meta.xml
<CustomField>
    <fullName>NonHoldPayrollWillRun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Hold: Action Req - Payroll Will Run</label>
    <type>Checkbox</type>
</CustomField>