force-app/main/default/objects/Reference_PEO_Discrepancy__c/fields/Reference_PEO__c.field-meta.xml
<CustomField>
    <fullName>Reference_PEO__c</fullName>
    <label>Reference PEO</label>
    <referenceTo>Reference_PEO__c</referenceTo>
    <relationshipLabel>Reference PEO Discrepancies</relationshipLabel>
    <relationshipName>PEO_Discrepancies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>