force-app/main/default/objects/Reference_PEO_Discrepancy__c/recordTypes/PEO_Discrepancy_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>PEO_Discrepancy_Record_Type</fullName>
    <active>true</active>
    <label>PEO Discrepancy Record Type</label>
</RecordType>