force-app/main/default/objects/Reference_PEO_Discrepancy__c/validationRules/If_Incomplete_Incorrect_W4_then_need_det.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Incomplete_Incorrect_W4_then_need_det</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
( 
ISPICKVAL(Discrepancy_Area__c,&quot;Payroll&quot;), 

ISPICKVAL(Discrepancy_Sub_Type__c, &quot;Incomplete/Incorrect W4&quot;), 

ISPICKVAL(Discrepancy_Type__c, &quot;Tax Info&quot;), 

ISBLANK ( Additional_Information__c ) 

)</errorConditionFormula>
    <errorDisplayField>Additional_Information__c</errorDisplayField>
    <errorMessage>If there is an incomplete/incorrect W4 then you need additional details</errorMessage>
</ValidationRule>