force-app/main/default/objects/Reference_PEO_Discrepancy__c/validationRules/If_Incomplete_Missing_Client_info_need_d.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Incomplete_Missing_Client_info_need_d</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
( 
ISPICKVAL(Discrepancy_Area__c,&quot;Payroll&quot;), 

ISPICKVAL(Discrepancy_Type__c,&quot;PEO068-_Prior_Wages_Form&quot;), 

ISBLANK(Additional_Information__c ) 

)</errorConditionFormula>
    <errorDisplayField>Additional_Information__c</errorDisplayField>
    <errorMessage>If there is incomplete/Missing client information then you need additional details</errorMessage>
</ValidationRule>