force-app/main/default/objects/Reference_PEO_Discrepancy__c/validationRules/PEO_Close_Discrepancy.validationRule-meta.xml
<ValidationRule>
    <fullName>PEO_Close_Discrepancy</fullName>
    <active>true</active>
    <description>Requires the user to fill in the resolved by field when the status is resloved</description>
    <errorConditionFormula>ispickval(Status__c, &quot;Resolved&quot;) &amp;&amp; len(text( Resolved_by__c)) &lt;2</errorConditionFormula>
    <errorDisplayField>Resolved_by__c</errorDisplayField>
    <errorMessage>Please choose who resolved the discrepancy</errorMessage>
</ValidationRule>