force-app/main/default/objects/Reference_PEO_Discrepancy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Reference_PEO__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Discrepancy_Sub_Type__c</columns>
    <columns>Discrepancy_Area__c</columns>
    <columns>Discrepancy_Type__c</columns>
    <columns>Resolved_by__c</columns>
    <columns>Status__c</columns>
    <columns>Check_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_PEO_Discrepancy__c.PEO_Discrepancy_Record_Type</value>
    </filters>
    <label>All</label>
</ListView>