force-app/main/default/objects/Reference_PEO_Discrepancy__c/listViews/All_Open_Discrepancies_Contractual.listView-meta.xml
<ListView>
    <fullName>All_Open_Discrepancies_Contractual</fullName>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>Resolved_by__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Discrepancy_Area__c</columns>
    <columns>Discrepancy_Type__c</columns>
    <columns>Discrepancy_Sub_Type__c</columns>
    <columns>Additional_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_PEO_Discrepancy__c.PEO_Discrepancy_Record_Type</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Discrepancy_Area__c</field>
        <operation>equals</operation>
        <value>Contractual</value>
    </filters>
    <label>Open Discrepancies - Contractual</label>
</ListView>